feat: engine config + custom operators end to end; folding and try fixes
The editor gains a full engine-settings surface and the core / binding
work that surface needs. See the [Unreleased] section of CHANGELOG.md
for the user-facing list.

Engine:
- `and` / `or` constant folding no longer drops dynamic arguments when a
  literal sits in trailing position; regression cases in
  control/and.json and control/or.json (58 suites / 1,658 cases)
- `try` hands engine-raised errors to the catch arm as `{"type": ...}`,
  not only `throw` payloads
- `date_diff` rejects an unknown unit instead of silently returning 0

Bindings:
- WASM: `builtinOperatorNames()`, `Engine.evaluateWithTrace`,
  `Engine.customOperatorNames()`; the start stub is no longer exported
  as `init` and pkg/bundler keeps its ESM package.json
- Node: `builtinOperatorNames()`, `Engine.customOperatorNames()`
- Go: nil-safe handle accessors and batch coverage

UI:
- `config` and `customOperators` props on DataLogicEditor, applied to
  both the result and the trace, summarised in the toolbar and carried
  in share links
- Insert menu (Cmd/Ctrl+K), duplicate (Cmd/Ctrl+D)
- step timeline, failure-breadcrumb highlighting, compile-error banner
- flagd operators in the palette, per-operator documentation links
- ~1,100 vitest cases over operator examples, graph round-trips, trace
  envelopes and the shipped samples

Review pass over the above, before commit:
- edge insert of a variable / literal replaces the child subtree; the
  picker now says so instead of discarding it silently
- structure elements track survivors by slot, not object identity, so a
  second removal in one pass is no longer a no-op
- structure placeholders get one unique marker per slot, so a literal
  "{{EXPR}}" in the template can no longer capture another element's
  offsets; the trace-side copy shares the helper
- custom operators are late-bound and keyed by name, so an inline
  `customOperators={{...}}` no longer remounts the editor or rebuil